--- a/NhnCommon/appsettings.json
+++ b/NhnCommon/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "AllowedHosts": "*",
-    "Intre": {
+    "nhn": {
         "TokenParameters": {
             "ServerRealm": "https://i3-keycloak-dev.hub.intre.it/realms/intre/",
             "ClientSecret": "wPGrdfJXISeKHBs4ZUXqMS5V89ziHKcx",
