update keycloak configs and authorize on the route

--- a/NhnCommon/appsettings.json
+++ b/NhnCommon/appsettings.json
@@ -8,14 +8,14 @@
     "AllowedHosts": "*",
     "nhn": {
         "TokenParameters": {
-            "ServerRealm": "https://i3-keycloak-dev.hub.intre.it/realms/intre/",
-            "ClientSecret": "wPGrdfJXISeKHBs4ZUXqMS5V89ziHKcx",
-            "Metadata": "https://i3-keycloak-dev.hub.intre.it/realms/intre/.well-known/openid-configuration"
+            "ServerRealm": "https://nhn-keycloak.seproprio.dev/realms/nhn/",
+            "ClientSecret": "v6p0If01rxjbEfWdPOXZ73bTufYJa983",
+            "Metadata": "https://nhn-keycloak.seproprio.dev/realms/nhn/.well-known/openid-configuration"
         },
         "PrincipalSettings": {
             "IdClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier",
             "ResourceAccessClaimType": "resource_access",
-            "ResourceAccessI3PortalBackendContext": "i3portal-backend",
+            "ResourceAccessContext": "nhn-cms",
             "ResourceAccessContextRoles": "roles"
         }
     }
