--- a/NhnCommon/Properties/launchSettings.json
+++ b/NhnCommon/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7043;http://localhost:5043",
+      "applicationUrl": "http://localhost:5043",
       "dotnetRunMessages": true
     },
     "IIS Express": {
