--- a/NhnCommon/NhnCommon.csproj
+++ b/NhnCommon/NhnCommon.csproj
@@ -21,6 +21,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\NhnCommon.Model.Author.Extensions\NhnCommon.Model.Author.Extensions.csproj" />
+        <ProjectReference Include="..\NhnCommon.Module.Authors\NhnCommon.Module.Authors.csproj" />
         <ProjectReference Include="..\NhnCommon.Shared\NhnCommon.Shared.csproj" />
     </ItemGroup>
 
