--- a/NhnCommon.DataModel.MongoDb/NhnCommon.DataModel.MongoDb.csproj
+++ b/NhnCommon.DataModel.MongoDb/NhnCommon.DataModel.MongoDb.csproj
@@ -8,12 +8,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\NhnCommon.DataModel\NhnCommon.DataModel.csproj" />
+      <ProjectReference Include="..\NhnCommon.Shared\NhnCommon.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-      <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
-      <PackageReference Include="MongoDB.Driver.Core" Version="2.18.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+        <PackageReference Include="MongoDB.Driver.Core" Version="2.18.0" />
     </ItemGroup>
 
 </Project>
