🚧 Try to call mongo

--- a/NhnCommon/appsettings.json
+++ b/NhnCommon/appsettings.json
@@ -20,7 +20,7 @@
     },
     "MongoDbParameters": {
       "ConnectionString": "",
-      "DatabaseName": ""
+      "DatabaseName": "nhn"
     }
   }
 }
