--- a/NhnCommon.Module.Categories/NhnCommon.Module.Categories.csproj
+++ b/NhnCommon.Module.Categories/NhnCommon.Module.Categories.csproj
@@ -7,8 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\NhnCommon.Model.Author.Extensions\NhnCommon.Model.Author.Extensions.csproj" />
+      <ProjectReference Include="..\NhnCommon.DataModel\NhnCommon.DataModel.csproj" />
       <ProjectReference Include="..\NhnCommon.Model.Category.Extensions\NhnCommon.Model.Category.Extensions.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     </ItemGroup>
 
 </Project>
