--- a/NhnCommon.Module.Categories/NhnCommon.Module.Categories.csproj
+++ b/NhnCommon.Module.Categories/NhnCommon.Module.Categories.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\NhnCommon.DataModel\NhnCommon.DataModel.csproj" />
       <ProjectReference Include="..\NhnCommon.Model.Category.Extensions\NhnCommon.Model.Category.Extensions.csproj" />
+      <ProjectReference Include="..\NhnCommon.Module.Shared.Extensions\NhnCommon.Module.Shared.Extensions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
