--- a/NhnCommon.Module.Authors.Extensions/NhnCommon.Module.Authors.Extensions.csproj
+++ b/NhnCommon.Module.Authors.Extensions/NhnCommon.Module.Authors.Extensions.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>NhnCommon.Module.Authors.Extensions</PackageId>
     </PropertyGroup>
 
 </Project>
