--- a/NhnCommon/NhnCommon.csproj
+++ b/NhnCommon/NhnCommon.csproj
@@ -22,7 +22,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\NhnCommon.DataModel.MongoDb\NhnCommon.DataModel.MongoDb.csproj" />
-        <ProjectReference Include="..\NhnCommon.Model.Author.Extensions\NhnCommon.Model.Author.Extensions.csproj" />
+        <ProjectReference Include="..\NhnCommon.Module.Authors.Extensions\NhnCommon.Module.Authors.Extensions.csproj" />
         <ProjectReference Include="..\NhnCommon.Module.Authors\NhnCommon.Module.Authors.csproj" />
         <ProjectReference Include="..\NhnCommon.Module.Categories\NhnCommon.Module.Categories.csproj" />
         <ProjectReference Include="..\NhnCommon.Shared\NhnCommon.Shared.csproj" />
