change deliverybot action and set dependency throught jobs

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,10 +19,11 @@ jobs:
       run: docker push rg.nl-ams.scw.cloud/nhn-cms/nhn-common:latest
       
   deployment:
+    needs: build
     runs-on: 'ubuntu-latest'
     steps:
     - name: 'Deploy'
-      uses: 'deliverybot/helm@v1'
+      uses: 'vimeda/helm@v1.6.8'
       with:
         release: 'nhn'
         namespace: 'nhn'
