--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Deploy
       uses: WyriHaximus/github-action-helm3@v2
       with:
-        exec: helm repo add nhn-charts rg.nl-ams.scw.cloud/nhn-cms --password ${{ secrets.DockerPassword }} --username nologin | 
-              helm upgrade nhn nhn-charts/nhn-chart:0.1.0 --install --wait --atomic --namespace=nhn --create-namespace 
+        exec: helm repo add nhn-charts rg.nl-ams.scw.cloud/nhn-cms --password ${{ secrets.DockerPassword }} --username nologin &&
+              helm repo update &&
+              helm upgrade nhn nhn-charts/nhn-chart --install --wait --atomic --namespace=nhn --create-namespace 
         kubeconfig: '${{ secrets.KUBECONFIG }}'
