--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,9 +22,10 @@ jobs:
     needs: build
     runs-on: 'ubuntu-latest'
     steps:
+    - name: Prep helm chart
+        run: helm repo add nhn-charts rg.nl-ams.scw.cloud/nhn-cms --password ${{ secrets.DockerPassword }} --username nologin
     - name: Deploy
       uses: WyriHaximus/github-action-helm3@v2
       with:
-        exec: helm repo add nhn-charts rg.nl-ams.scw.cloud/nhn-cms --password ${{ secrets.DockerPassword }} --username nologin &&
-              helm upgrade nhn nhn-charts/nhn-chart --install --wait --atomic --namespace=nhn --create-namespace 
+        exec: helm upgrade nhn nhn-charts/nhn-chart --install --wait --atomic --namespace=nhn --create-namespace 
         kubeconfig: '${{ secrets.KUBECONFIG }}'
