--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,5 +24,7 @@ jobs:
     steps:
     - name: Login OCI registry
       run: echo "${{ secrets.DockerPassword }}" | helm registry login rg.nl-ams.scw.cloud/nhn-cms -u nologin --password-stdin 
+    - name: Pull chart
+      run: helm pull oci://rg.nl-ams.scw.cloud/nhn-cms/nhn-chart --version 0.1.0
     - name: Deploy
-      run: helm upgrade nhn oci://rg.nl-ams.scw.cloud/nhn-cms/nhn-chart --version=0.1.0 --install --wait --atomic --namespace=nhn --create-namespace --kubeconfig ${{ secrets.KUBECONFIG }}
+      run: helm upgrade nhn-cms oci://rg.nl-ams.scw.cloud/nhn-cms/nhn-chart --version=0.1.0 --install --wait --atomic --namespace=nhn --create-namespace --kubeconfig ${{ secrets.KUBECONFIG }}
