--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
     - uses: SamhammerAG/setup-yq@1.0.2
     - uses: SamhammerAG/helm-action/deploy@v1.5.2
       with:
-        registry: rg.nl-ams.scw.cloud/nhn-cms
+        registry: oci://rg.nl-ams.scw.cloud/nhn-cms
         registry_user: nologin
         registry_password: ${{ secrets.DockerPassword }}
         registry_path: nhn-chart
