--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'Scaleway registry'
-        repository: 'nhn-common'
+        repository: 'nhn-cms/nhn-common'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
 
