Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,5 @@ stages:
         repository: 'nhn-cms/nhn-common'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
+        tags: $(Build.BuildId)
 
